backport of commit d507ffb88310efba7edaa36cacc96a1381725173

--- a/website/content/docs/secrets/identity/oidc-provider.mdx
+++ b/website/content/docs/secrets/identity/oidc-provider.mdx
@@ -10,7 +10,7 @@ description: >-
 Vault is an OpenID Connect ([OIDC](https://openid.net/specs/openid-connect-core-1_0.html))
 identity provider. This enables client applications that speak the OIDC protocol to leverage
 Vault's source of [identity](/docs/concepts/identity) and wide range of [authentication methods](/docs/auth)
-when authenticating end-users. Clients applications can configure their authentication logic
+when authenticating end-users. Client applications can configure their authentication logic
 to talk to Vault. Once enabled, Vault will act as the bridge to other identity providers via
 its existing authentication methods. Client applications can also obtain identity information
 for their end-users by leveraging custom templating of Vault identity information.
