--- a/website/content/docs/plugins/plugin-development.mdx
+++ b/website/content/docs/plugins/plugin-development.mdx
@@ -75,7 +75,7 @@ plugin and enable it.
 
 ## Plugin Development - Resources
 
-For more information on how to register and enable your plugin, check out the
+For more information on how to register and enable your plugin, refer to the
 [Building Plugin Backends](https://learn.hashicorp.com/vault/developer/plugin-backends)
 tutorial.
 
