remove single item list; add link to Database interface

--- a/website/content/docs/secrets/databases/custom.mdx
+++ b/website/content/docs/secrets/databases/custom.mdx
@@ -246,14 +246,12 @@ connections. To enable multiplexing, the plugin must be compiled with the
 ### Upgrading your database plugin to leverage plugin multiplexing
 
 There is only one step required to upgrade from a non-multiplexed to a
-multiplexed database plugin:
-
-1. Change the `Serve` function call to `ServeMultiplex`.
+multiplexed database plugin: Change the `Serve` function call to `ServeMultiplex`.
 
 This will run the RPC server for the plugin just as before. However, the
 `ServeMultiplex` function takes the factory function directly as its argument.
 This factory function is a function that returns an object that implements the
-`dbplugin.Database` interface.
+[`dbplugin.Database` interface](/docs/secrets/databases/custom#plugin-interface).
 
 ### When should plugin multiplexing be avoided?
 
