--- a/website/content/docs/auth/login-mfa/index.mdx
+++ b/website/content/docs/auth/login-mfa/index.mdx
@@ -39,6 +39,12 @@ MFA in Vault includes the following login types:
 
 ## Login MFA Procedure
 
+~> **NOTE:** Vault's built-in Login MFA feature does not protect against brute forcing of
+TOTP passcodes by default. We recommend that per-client [rate limits](/docs/concepts/resource-quotas)
+are applied to the relevant login and/or mfa paths (e.g. `/sys/mfa/validate`). External MFA
+methods (`Duo`, `Ping` and `Okta`) may already provide configurable rate limiting. Rate limiting of
+Login MFA paths will be enforced by default in a future release.
+
 Login MFA can be configured to secure further authenticating to an auth method. To enable login
 MFA, an MFA method needs to be configured. Please see [Login MFA API](/api-docs/secret/identity/mfa) for details
 on how to configure an MFA method. Once an MFA method is configured, an operator can configure an MFA enforcement using the returned unique MFA method ID.
