docs/ssct: service side to server side

--- a/website/content/docs/enterprise/consistency.mdx
+++ b/website/content/docs/enterprise/consistency.mdx
@@ -206,7 +206,7 @@ The replication option [allow_forwarding_via_token](/docs/configuration/replicat
 can be used to enforce requests that would have returned 412s in the
 aforementioned way will be forwarded instead to the active node.
 
-Refer to the [Service Side Consistent Token FAQ](/docs/faq/ssct) for details.
+Refer to the [Server Side Consistent Token FAQ](/docs/faq/ssct) for details.
 
 ## Client API helpers
 
