--- a/website/content/docs/faq/ssct.mdx
+++ b/website/content/docs/faq/ssct.mdx
@@ -1,7 +1,7 @@
 ---
 layout: docs
 page_title: Server Side Consistent Token FAQ
-description: An list of frequently asked questions about service side consistent token
+description: An list of frequently asked questions about server side consistent tokens
 ---
 
 # Server Side Consistent Token FAQ
