--- a/website/content/docs/upgrading/upgrade-to-1.10.x.mdx
+++ b/website/content/docs/upgrading/upgrade-to-1.10.x.mdx
@@ -51,4 +51,4 @@ Additionally, non-root service tokens are now longer than before. Previously, se
 were 26 characters; they now have a minimum of 95 characters. However, existing tokens will
 still work.
 
-Refer to the [Service Side Consistent Token FAQ](/docs/faq/ssct) for details.
+Refer to the [Server Side Consistent Token FAQ](/docs/faq/ssct) for details.
