--- a/website/content/docs/upgrading/upgrade-to-1.10.x.mdx
+++ b/website/content/docs/upgrading/upgrade-to-1.10.x.mdx
@@ -70,8 +70,8 @@ The following built-in resources are included in each Vault namespace starting w
 If you created an [OIDC provider](/api-docs/secret/identity/oidc-provider#create-or-update-a-provider)
 with the name "default", [key](/api-docs/secret/identity/tokens#create-a-named-key) with the
 name "default", or [assignment](/api-docs/secret/identity/oidc-provider#create-or-update-an-assignment)
-with the name "allow*all" using the Vault 1.9 tech preview, the installation of these built-in
-resources will be skipped. We \_strongly* recommend that you delete any resources that have
+with the name "allow_all" using the Vault 1.9 tech preview, the installation of these built-in
+resources will be skipped. We _strongly_ recommend that you delete any resources that have
 naming collisions before upgrading to Vault 1.10. Failing to delete resources with naming
 collisions could result unexpected default behavior. Additionally, we recommend reading the
 corresponding details in the OIDC provider [concepts](/docs/concepts/oidc-provider) document
