backport of commit 6b55f0653db9dcc7bf3bb97deec4d4e2952eaefa

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -93,7 +93,7 @@ This endpoint returns client activity information for a given billing
 period, which is represented by the `start_time` and `end_time` parameters.
 parameters.
 
-There are a few things to be known while using this API.
+There are a few things to keep in mind while using this API.
 
 - The activity information only accounts for activity that has happened for the
 latest contiguous months in the billing period. For example, if the billing
