--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -103,7 +103,7 @@ will only include information for the months of May and June.
 - The response contains the total activity for the billing period and the
 attributions of the total activity against specific components in Vault. This
 helps in understanding the total activity better by knowing which components in
-Vault are leading to that top level activity count. First level of attribution
+Vault lead to that top-level activity count. First-level of attribution
 breakdowns are by namespaces and months, under the `by_namespaces` and `months`
 JSON block respectively.
 
