backport of commit 12d97fb79fbf4f82656078bdd72c64ca4a78b4fd

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -142,7 +142,7 @@ mount path within a given namespace to the overall activity of the namespace.
 ```
 
 - `months` breakdowns provide attributions of each month to the total activity
-count. These month level attributions are further broken down into namespace and mount
+count. These month-level attributions are further broken down into namespace and mount
 level attributions for each month.
 
 ```json
