backport of commit f4073b5b362062979a1dcb4e584c1cde5d3e8968

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -189,7 +189,7 @@ level attributions for each month.
 }
 ```
 
-- Each entry in the `months` breakdown contains a `new_clients` block. Within a
+- Each entry in the `months` breakdown contains a `new_clients` block. When a token is first used within a billing period, regardless of when it was created, that token is considered a new client for that billing period.
 billing period, when a token is first used, regardless of when it was created,
 that token is considered a new client for that billing period. This means that
 all the active clients in the first month of the billing period will be
