backport of commit d7de4d9197a30e834836491575ce2b185618a19c

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -191,7 +191,7 @@ level attributions for each month.
 
 - Each entry in the `months` breakdown contains a `new_clients` block. When a token is first used within a billing period, regardless of when it was created, that token is considered a new client for that billing period.
 billing period, when a token is first used, regardless of when it was created,
-that token is considered a new client for that billing period. This means that
+ This means that
 all the active clients in the first month of the billing period will be
 considered new clients for that billing period. These tokens could all be
 generated and counted in the previous billing period, but despite that they are
