backport of commit f9ea2c861ad445f65e7ff5ed2d4e69f0bd27737c

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -197,7 +197,7 @@ considered new clients for that billing period. These tokens could all be
 generated and counted in the previous billing period, but despite that they are
 still considered new clients in the context of the given billing period. For
 each subsequent month in the same billing period, the tokens used in those
-respective months that were not used in any of the previous months of the same
+ months that were unused in previous months of the same
 billing period are considered new clients for that month. Hence, the computation
 of new clients differs for each combination of `start_time` and `end_time`.
 
