backport of commit f826c61cd405357bc4b593fc355725152929cec5

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -238,7 +238,7 @@ Vault lead to the new clients for each month.
 `entity_clients` field instead. The `distinct_entities` field is currently
 returned by the API for backward compatibility and it may be removed in the future.
 
-- The `non_entity_tokens` field name is deprecated since Vault 1.10. Refer to
+- The `non_entity_tokens` field name has been deprecated since Vault 1.10. Refer to
 `non_entity_clients` field instead. The `non_entity_tokens` field is currently
 returned by the API for backwards compatibility and it may be removed in future.
 
