backport of commit e69942b5e421b4447f297f1950c4cbbc56d53737

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -240,7 +240,7 @@ returned by the API for backward compatibility and it may be removed in the futu
 
 - The `non_entity_tokens` field name has been deprecated since Vault 1.10. Refer to
 `non_entity_clients` field instead. The `non_entity_tokens` field is currently
-returned by the API for backwards compatibility and it may be removed in future.
+returned by the API for backward compatibility, and it may be removed in the future.
 
 - If the `end_date` supplied to the API is for the current month, the activity
 information returned by this API will only be till the previous month. The
