backport of commit d341f48ddebe30b226ec2c71cf8536d3953f5703

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -246,7 +246,7 @@ returned by the API for backward compatibility, and it may be removed in the fut
 information returned by this API will only be till the previous month. The
 activity system is designed to process the accumulated activity only at the end
 of the month. Since the current month's information is not fully processed by
-the system it will not be added to the API response. However the accumulated
+However, the accumulated
 response can be viewed using the partial month API.
 
 - The response includes the actual time period covered, which may not exactly
