backport of commit a47e23aa23a0a0f5fc7180d6360398d44ecb4339

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -258,7 +258,7 @@ page.
 
 The response will include all child namespaces of the namespace in which the
 request was made. If some namespace has subsequently been deleted, its path will
-be listed as "deleted namespace :ID:". Deleted namespaces are reported only for
+be listed as "deleted namespace :ID:." Deleted namespaces are reported only for
 queries in the root namespace, because the information about the namespace path
 is unknown.
 
