backport of commit 6ddceab1b7c914ab3ab3a394aa5fa1b3fd1f26ba

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -96,7 +96,7 @@ There are a few things to keep in mind while using this API.
 
 - The activity information only accounts for activity that has happened for the
 latest contiguous months in the billing period. For example, if the billing
-period is from Jan 2022 to June 2022, and say the activity subsystem in Vault
+period is from Jan 2022 to June 2022, and the activity subsystem in Vault
 was not capturing data for the months Jan to March for any reason, the response
 will only include information for the months of May and June.
 
