backport of commit 1f6786a60bd9e30c75e4f3b16a9849278f9e354c

--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -105,7 +105,7 @@ attributions of the total activity against specific components in Vault. This
 helps in understanding the total activity better by knowing which components in
 Vault lead to that top-level activity count. First-level of attribution
 breakdowns are by namespaces and months, under the `by_namespaces` and `months`
-JSON block respectively.
+JSON block, respectively.
 
 ```json
 {
